# DataAnalytics

./: Dockerfile  docker-compose.yaml  pyproject.toml
dataanalytics/: db.sqlite3  manage.py
dataanalytics/data_app/: admin.py  models.py  resource.py  urls.py  utils.py  views.py
dataanalytics/data_app/migrations/: 0001_initial.py  0002_sale_alter_car_brand.py  0003_person_order.py  0004_alter_order_region.py  0005_delete_car_delete_sale.py
dataanalytics/data_app/templates/dataanalytics/: main.html
dataanalytics/dataanalytics/: asgi.py  settings.py  urls.py  wsgi.py
dataanalytics/templates/: base.html
